# ChessSoftware

./: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  save.txt
app/src/bdd/: db.json
app/src/controller/: database.py  player.py  tournament.py
app/src/models/: match.py  round.py  tournament.py
app/src/view/: player.py  (+4 more)
flake-report/: app.src.controller.database.report.html  app.src.controller.database.source.html  app.src.controller.tournament.report.html  app.src.controller.tournament.source.html  app.src.models.match.report.html  app.src.models.match.source.html  app.src.models.round.report.html  app.src.models.round.source.html  app.src.tests.models.test_tournament.report.html  app.src.tests.models.test_tournament.source.html  app.src.view.base_view.report.html  app.src.view.base_view.source.html  app.src.view.main_menu.report.html  app.src.view.main_menu.source.html  app.src.view.player.report.html  app.src.view.player.source.html  app.src.view.report.report.html  app.src.view.report.source.html  index.html
src/: main.py
src/bdd/: db.json  players.json
src/controller/: database.py  player.py  tournament.py  tournamentController.py  tournament_controller.py
src/models/: Joueurs.py  Tournois.py  joueur.py  match.py  matchs.py  player.py  round.py  test_joueurs.py  tour.py  tournament.py  tournoi.py  tournois.py  tours.py
src/utils/: clear_shell.py
src/view/: base.py  base_view.py  joueur_form_view.py  joueur_view.py  main_menu.py  menuView.py  menu_view.py  player.py  report.py  tournament.py  tournoi_form_view.py
(+1 files in other folders)
