[tool.poetry]
name = "chesssoftware"
version = "0.1.0"
description = ""
authors = ["Etilium <fiorettimickael1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
